test/arrays/compilerErrors/array-of-generic-management.chpl
class MyClass { }
var A:[1..10] MyClass;
