test/arrays/compilerErrors/array-of-generic-management.good
array-of-generic-management.chpl:2: warning: creating an array with element type MyClass
array-of-generic-management.chpl:2: warning: which is a class type with generic management
array-of-generic-management.chpl:2: error: array element type cannot currently be generic
